Fixed width on non mobile screens Added some settings to users

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,12 @@
 /* app css stylesheet */
 
+@media only screen and (min-width:960px){
+    .viewDiv {
+        width: 50%;
+        margin: 0 auto;
+    }
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
